# pycccedict

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  unittest.yml
pycccedict/: cccedict.py  cccedict_test.py
