[tool.poetry]
name = "pycccedict"
version = "1.0.0"
description = "CC-CEDIT in Python"
authors = ["Patrick Pei <14530807+patrickpei@users.noreply.github.com>"]
license = "CC BY-SA 4.0"
readme = "README.md"
repository = "https://github.com/patrickpei/pycccedict"
documentation = "https://github.com/patrickpei/pycccedict#api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
